# midcom-tax-python

./: compile-ui.bat  compile-ui.sh  pkg-win.bat  pyproject.toml
midcom_tax/: __main__.py  app.py  controller.py  main_window.py  midcom.py  models.py
tests/: test_midcom_tax.py
ui/: mainwindow.ui  ui_mainwindow.py
