[tool.poetry]
name = "midcom-tax"
version = "0.1.0"
description = ""
authors = ["Zach Massia <zmassia@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
PySide6 = "^6.0.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.7.4"
autopep8 = "^1.5.6"
pyinstaller = "^4.3"

[tool.poetry.scripts]
run = "midcom_tax.app:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
