[tool.poetry]
name = "midcom-tax"
version = "0.1.1"
description = ""
authors = ["Zach Massia <zmassia@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
PySide6 = "^6.0.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.7.4"
autopep8 = "^1.5.6"
pyinstaller = "^5.2"

[tool.poetry.scripts]
run = "midcom_tax.app:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
